# lab05

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
formatter_ex/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_ex/hello_world/: CMakeLists.txt  main.cpp
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world/: CMakeLists.txt  main.cpp
solver/: CMakeLists.txt  main.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
tests/: test_account.cpp  test_transaction.cpp
