cmake_minimum_required(VERSION 3.10)
project(lab05)

option(BUILD_TESTS "Build tests" OFF)

add_subdirectory(banking)

if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(third-party/gtest)
    
    add_executable(check tests/test_account.cpp tests/test_transaction.cpp)
    target_link_libraries(check banking gtest gtest_main)
    target_include_directories(check PRIVATE banking)
    target_include_directories(check PRIVATE third-party/gtest/googletest/include)
    
    add_test(NAME check COMMAND check)
endif()
